--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,24 @@ android {
     }
 }
 
+apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
+def AAVersion = '4.0.0'
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.1.0'
+
+    // AndroidAnnotations
+    compile 'com.android.support:support-annotations:24.0.0'
+    apt "org.androidannotations:androidannotations:$AAVersion"
+    compile "org.androidannotations:androidannotations-api:$AAVersion"
+
+    // Realm
+    compile 'io.realm:realm-android:0.82.1'
+
+    // RecyclerView
+    compile 'com.android.support:recyclerview-v7:+'
+
 }
