--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,23 @@ dependencies {
     // RecyclerView
     compile 'com.android.support:recyclerview-v7:+'
 
+    // jCenter
+    compile 'jp.wasabeef:recyclerview-animators:2.2.3'
+
     // Lombok
     provided "org.projectlombok:lombok:1.12.6"
+
+    // Gson
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.6.2'
+
+    // CardView
+    compile 'com.android.support:cardview-v7:+'
+
+    // Parceler
+    compile "org.parceler:parceler-api:1.0.3"
+    apt "org.parceler:parceler:1.0.3"
+
+    // MPAndroidChart
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.0-beta1'
 
 }
