--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,9 @@ allprojects {
     repositories {
         jcenter()
     }
+    repositories {
+        maven { url "https://jitpack.io" }
+    }
 }
 
 task clean(type: Delete) {
