Create confirm review result, review result layout and update layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".acitivities.ReviewResultActivity_"
+            android:configChanges="keyboardHidden|orientation|screenSize" />
+        <activity
+            android:name=".acitivities.DoTestActivity_"
+            android:configChanges="keyboardHidden|orientation|screenSize" />
     </application>
 
 </manifest>
