--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     compile "org.androidannotations:androidannotations-api:$AAVersion"
 
     // RecyclerView
-    compile 'com.android.support:recyclerview-v7:+'
+    compile 'com.android.support:recyclerview-v7:24.0.0'
 
     // jCenter
     compile 'jp.wasabeef:recyclerview-animators:2.2.3'
@@ -45,9 +45,6 @@ dependencies {
 
     // Gson
     compile group: 'com.google.code.gson', name: 'gson', version: '2.6.2'
-
-    // CardView
-    compile 'com.android.support:cardview-v7:+'
 
     // Parceler
     compile "org.parceler:parceler-api:1.0.3"
